--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -149,9 +149,9 @@ td, th {
 }
 th {
     background: #fff url(../images/skin/shadow.jpg);
-    color: #666;
+    color: #333;
     font-size: 11px;
-    font-weight: bold;
+    font-weight: normal;
     line-height: 17px;
     padding: 2px 6px;
 }
@@ -183,7 +183,7 @@ th.desc a {
 /* LIST */
 
 .list table {
-  width: 600px;
+  width: 800px;
   border-collapse: collapse;
 }
 
@@ -198,6 +198,16 @@ th.desc a {
 .list th.id
 {
   width: 30px;
+}
+
+.list th.datetime
+{
+  width: 140px;
+}
+
+.list th.mark
+{
+  width: 60px;
 }
 
 /* PAGINATION */
