--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -63,6 +63,53 @@ input:focus, select:focus, textarea:focus {
     margin: 0 15px 10px 15px;
 }
 
+#wrapper
+{
+  width: 1000px;
+  margin: 5px auto;
+  padding: 0 5px;
+  background: url('../images/bg_strip.png');
+  overflow: auto;
+}
+
+#header
+{
+  width: 100%;
+  height: 129px;
+  background: url('../images/header_bg.jpg');
+}
+
+#header #left
+{
+  height: 129px;
+  width: 26px;
+  background: url('../images/header_left.jpg');
+  float: left;
+}
+
+#header #right
+{
+  height: 129px;
+  width: 26px;
+  background: url('../images/header_right.jpg');
+  float: right;
+}
+
+#left_menu
+{
+  width: 170px;
+  float: left;
+  overflow: auto;
+}
+
+#content
+{
+  width: 500px;
+  float: left;
+  overflow: auto;
+  margin-left: 30px;
+}
+
 /* NAVIGATION MENU */
 
 .nav {
