filtrowanie udzialow: nauczyciele (prowadzacy) takze uwzglednieni; ladniejsze skladanie HQL (prepared query); usuniecie heisenbuga zwiazanego z wypluwaniem errora przy niektorych scenariuszach przelogowywania; stylowanie (strona udzialu)

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -152,6 +152,12 @@ input:focus, select:focus, textarea:focus {
   margin-left: 10px;
 }
 
+#content textarea
+{
+  width: 440px;
+  margin-left: 0;
+}
+
 /* NAVIGATION MENU */
 
 .nav {
