edycja profilu (imie i nazwisko)

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -367,6 +367,8 @@ th.desc a {
     width: 100%;
 }
 
+
+
 .prop {
     padding: 5px;
 }
@@ -438,6 +440,11 @@ h3
 input#student_email
 {
   width: 400px;
+}
+
+input#name
+{
+  width: 500px;
 }
 
 ul#students_list
